--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up JDK 15
       uses: actions/setup-java@v1
       with:
-        java-version: 15
+        java-version: "15.0.1"
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
