--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,16 +11,8 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    container: adoptopenjdk/openjdk15
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 15
-      uses: actions/setup-java@v1
-      with:
-        java-version: "15.0.1"
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew test
+      - name: Run Tests
+        run: ./gradlew test
