--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,5 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     container: adoptopenjdk/openjdk15
     steps:
+      - uses: actions/checkout@v2
       - name: Run Tests
         run: ./gradlew test
