--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     image: gradle:6.7-jdk15
     ports:
       - "8080:8080"
+      - "5005:5005"
       - "35729:35729"
     volumes:
       - ".:/app"
+      - ".gradle/container:/home/gradle"
     command: sh -c "cd /app && sh setup.sh"
